# gw2dattools

./: .gitignore  CMakeLists.txt  README.md  TODO.md
examples/: CMakeLists.txt
examples/prj/: Test.cbp  Test.depend  Test.vcxproj  simple-extractor.cbp  simple-extractor.filters  simple-extractor.vcxproj  simpleExtractor.cbp  simpleExtractor.depend  simpleExtractor.layout  simpleExtractor.vcxproj  test.cbp  test.vcxproj
examples/src/: simple-extractor.cpp  simpleExtractor.cpp  test.cpp
include/gw2DatTools/c_api/: compression_inflateDatFileBuffer.h
include/gw2DatTools/compression/: inflateDatFileBuffer.h  inflateTextureFileBuffer.h
include/gw2DatTools/exception/: Exception.h
include/gw2DatTools/interface/: ANDatInterface.h
include/gw2dattools/c_api/: compression_inflateDatFileBuffer.h
include/gw2dattools/compression/: inflateDatFileBuffer.h  inflateTextureFileBuffer.h
include/gw2dattools/exception/: Exception.h
include/gw2dattools/interface/: ANDatInterface.h
misc/ida/: parseANStructs.idc
misc/templates/: ANStructs.txt  Removed.txt
prj/: gw2DatTools.cbp  gw2DatTools.depend  gw2DatTools.layout  gw2DatTools.sln  gw2DatTools.vcxproj  gw2DatTools.vcxproj.filters  gw2DatTools.workspace  gw2DatTools.workspace.layout  gw2dattools.cbp  gw2dattools.sln  gw2dattools.vcxproj  gw2dattools.vcxproj.filters
src/gw2DatTools/c_api/: compression_inflateDatFileBuffer.cpp
src/gw2DatTools/compression/: HuffmanTree.h  HuffmanTree.i  huffmanTreeUtils.cpp  huffmanTreeUtils.h  inflateDatFileBuffer.cpp  inflateTextureFileBuffer.cpp
src/gw2DatTools/format/: ANDat.cpp  (+6 more)
(+22 files in other folders)
